
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2006-08-26

	* FAQ's updated to point to current sylpheed-claws wiki
	  (thanks to Paul Mangan)

1.1.1	2006-08-23 (released)

	2006-08-22

	* Added bogofilter-faq-it.html, an Italian translation of the
          FAQ  (thanks to Marco Bozzolan).

	2006-08-10

	* Fixed minor header/body multi-word token defect.

1.1.0	2006-08-09 (released)

	* Revised FAQ's mailbox conversion example.

	2006-07-26

	* 1.0.3 Promoted to "Stable" status

	2006-07-24

	* Forward port GNU make compatibility fix for doc/Makefile* from
	  1.0 branch.

	2006-07-08

	* Add large file support for 32-bit systems.
	  (_FILE_OFFSET_BITS/_LARGE_FILE).
	* Fix lexer_v3.l format string mismatch that broke debugging code on
	  64-bit systems.

	2006-07-04

	* Add multi-word token support to bogoutil & bogotune.

	2006-07-03

	* Clean up token prefixing.
	* Clean up queue-id processing.
	* Add max-multi-token-len checks.
	* Revised function names.  get_token() uses parse_new_token(),
          add_token_to_array(), build_token_from_array(), and
          build_prefixed_token(). 

	2006-07-02

	* Add min-token-len check (with exemption for 2 character
          money amounts which bogofilter has long accepted).
	* Add "short token" pattern to lexer

	2006-07-01

	* Refactor get_token.  Function get_single_token is the original
          get_token function.  Function get_multi_token calls
          get_single_token when another token must be parsed, else it
          constructs multi-part tokens using w_token_array (an array
          of word_t structs).

	2006-06-20

	* Add options for min/max token length, multi-token count, and