@@ -15,6 +15,10 @@
 
 -------------------------------------------------------------------------------
 
+	2006-10-03
+
+	* Added '--ham-true' option for bogofilter (to match docs)
+
 	2006-08-26
 
 	* FAQ's updated to point to current sylpheed-claws wiki
